# youtube-analytics-project

./: .flake8  .gitignore  .pylintrc  README.md  api.txt  config.py  main.py  moscowpython.json  pyproject.toml  requirements.txt  test.txt
.github/workflows/: pylint.yml  python-package.yml
data/: moscowpython.json
helper/: homework5.py  youtube_api.py  youtube_api_manual.py
homework-1/: api.py  main.py  requirements.txt  test.py
homework-2/: learn.py  main.py  moscowpython.json  vdud.json
homework-3/: README.md  main.py
homework-4/: README.md  main.py
homework-5/: README.md  main.py
homework-6/: README.md  main.py
my_test/: testing.py  youtube_my_test.py
package-name/: pyproject.toml
src/: InvalidIDError.py  PlayList.py  Playlist.py  Video.py  api.py  apimixin.py  baseclass.py  channel.py  channel_1.py  channel_data.json  config.py  constants.py  get_service.py  moscowpython.json  playlist.py  utils.py  video.py  youtube.py  youtube_object.py
tests/: conftest.py  pytest.ini  pytest.ini.py  test_channel.py  test_item.py
