[tool.poetry]
name = "youtube-analytics-project"
version = "0.1.0"
description = ""
authors = ["Тоторо <roman.aka.tod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.115.0"
pytest-cov = "^4.1.0"
isodate = "^0.6.1"
timedelta-isoformat = "^0.6.2.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
